src/objects/jiffle__Meeting__c/jiffle__Meeting__c.object-meta.xml
<CustomObject>
    <description>Used to store JiffleMeetings / activities.</description>
    <label>Meeting</label>
    <nameField>
        <displayFormat>MT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>