src/objects/jiffle__Meeting__c/fields/jiffle__Event__c.field-meta.xml
<CustomField>
    <fullName>jiffle__Event__c</fullName>
    <label>Event</label>
    <referenceTo>jiffle__Event__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Jiffle_Meetings_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>