src/objects/jiffle__Meeting__c/fields/jiffle__JN_Custom_fields__c.field-meta.xml
<CustomField>
    <fullName>jiffle__JN_Custom_fields__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JN Meeting Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>