src/objects/jiffle__Meeting__c/fields/jiffle__Track__c.field-meta.xml
<CustomField>
    <fullName>jiffle__Track__c</fullName>
    <description>Holds Track of the meeting/nominations</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Track</label>
    <length>255</length>
    <type>Text</type>
</CustomField>